Add average time per round stat on game page

--- a/views/game.pug
+++ b/views/game.pug
@@ -24,6 +24,9 @@ html
           strong Waiting on Player:
           |  #{currentPlayer}
         li
+          strong Average Time per Round:
+          |  #{averageTimePerRound}
+        li
           strong Estimated Time Left:
           |  #{maxEstimatedTimeLeft}
         li
