--- a/views/game.pug
+++ b/views/game.pug
@@ -4,7 +4,7 @@ html
       title Civalittle - #{game}
    body
       include ./header.pug
-      H1 #{game} Stats
+      H1 #{game}
       table
         tr
           th(align="left") Player
@@ -15,7 +15,7 @@ html
             td #{turnTime[player]['avgTimePerTurnString']}
       br()
       b() *Sorted Descending by Average Time Per Turn
-      H2 Additional Stats
+      H2 Additional Info
       ul
         li
           strong Round:
@@ -24,7 +24,10 @@ html
           strong Waiting on Player:
           |  #{currentPlayer}
         li
-          strong Average Time per Round:
+          strong Time Since Last Turn:
+          |  #{timeSinceLastTurn}
+        li
+          strong Average Time Per Round:
           |  #{averageTimePerRound}
         li
           strong Estimated Time Left:
