Added test bench and encrypted config.js
I added my test bench start and encrypted the config.js file.  Ask me for the passphrase.

--- a/views/main.pug
+++ b/views/main.pug
@@ -4,7 +4,7 @@ html
       title Civalittle
    body
       include ./header.pug
-      H1 Games in Progress
+      H1 Adam pushes Flakes Games in Progress
       table
         tr
           th(align="left") Game
